--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -5,6 +6,9 @@ __pycache__/
 
 # C extensions
 *.so
+
+# macOS
+.DS_Store
 
 # Distribution / packaging
 .Python
@@ -56,7 +60,6 @@ coverage.xml
 *.pot
 
 # Django stuff:
-*.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
