--- a/App/frontend/package.json
+++ b/App/frontend/package.json
@@ -10,7 +10,9 @@
     "react": "^17.0.2",
     "react-csv-reader": "^3.3.1",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
